feat: Correction question 3.i avec mapper pour simplifier le retour du Book by Id
