# public/swagger.json
@@ -92,6 +92,38 @@
 				"parameters": []
 			}
 		},
+		"/books/{id}": {
+			"get": {
+				"operationId": "GetBoodById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BookDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/authors": {
 			"get": {
 				"operationId": "GetAllAuthors",
